crates/strider-analyze/tests/snapshots/v3__mips32le__stack__large_local_array.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "3" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v11" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v11" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v12" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v14" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v14" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v16" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "15" -> "v16" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "15" -> "v14" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "13" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "18" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v16" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "22" -> "18" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="φ v1", shape=house, fillcolor="#163030"];
  "13" -> "24" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "21" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "19" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xffffffc0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="φ a2", shape=house, fillcolor="#163030"];
  "40" -> "39" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "42" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="φ v0", shape=house, fillcolor="#163030"];
  "40" -> "44" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "43" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v47" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v47" -> "40" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "40" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "48" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "48" -> "v11" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v49" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "48" -> "v49" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "40" -> "48" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "51" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "51" -> "v12" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "51" -> "v47" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v49" -> "51" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "52" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "43" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "54" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="init\na0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="φ Mem", shape=house, fillcolor="#163030"];
  "40" -> "37" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "57" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "59" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="φ v1", shape=house, fillcolor="#163030"];
  "1" -> "60" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "61" -> "60" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "62" -> "60" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "63" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "65" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="φ v0", shape=house, fillcolor="#163030"];
  "1" -> "65" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "63" -> "65" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "57" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="φ v0", shape=house, fillcolor="#163030"];
  "13" -> "27" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "20" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "69" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "21" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "54" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "5" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "63" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
