crates/strider-analyze/tests/snapshots/v3__mips32le__stack__recursive_stack_growth.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "7" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="φ v1", shape=house, fillcolor="#163030"];
  "5" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="φ s0", shape=house, fillcolor="#163030"];
  "5" -> "22" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "11" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "24" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "11" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "25" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "29" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x6:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "33" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "37" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "41" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "45" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "49" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "45" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "53" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "53" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "56" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="init\ns0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "56" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="φ v0", shape=house, fillcolor="#163030"];
  "5" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "59" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "13" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "62" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x400808:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" -> "62" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "39" -> "62" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "43" -> "62" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "47" -> "62" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "65" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "62" -> "65" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "62" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "66" -> "65" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v67" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "62" -> "v67" [color="#888888", style=dashed];
  "v67" -> "65" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v68" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "62" -> "v68" [color="#888888", style=dashed];
  "v68" -> "65" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v69" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "62" -> "v69" [color="#888888", style=dashed];
  "v69" -> "65" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "66" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v70" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "62" -> "v70" [color="#888888", style=dashed];
  "v70" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
